NT-211 - Remove underscore from z-index and do not use < in CSS - ie folklore that they do not work and in this can not strictly necessary.  NOTE: Submenus still do not appear to be correct on IE6, if nav menu wraps and you hover over 'Users', then 'Diagnostics' clobers the submenu selection for 'Users, which I believe is the problem described in NT-211 for IE7
git-svn-id: http://sipxecs.sipfoundry.org/rep/sipXecs/main@10197 ab1d8caa-1f67-47f1-9e81-24633a41865c

--- a/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/ie6-hacks.css
+++ b/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/ie6-hacks.css
@@ -1,10 +1,12 @@
 #navigation li ul {
-	/* top and left are for IE only */
 	top: 2em;
 	left: 0em;
 }
 
-#navigation li {
-	/* IE explorer only - working around Z-index bug */
-    _z-index: 500;
+#navigation  ul li {
+	z-index: 500;
+}
+
+#navigation  ul li ul li  {
+	z-index: 600;
 }
